correction pop ennemis